--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "dev:ssr": "ng run template:serve-ssr",
+    "serve:ssr": "node dist/template/server/main.js",
+    "build:ssr": "ng build && ng run template:server",
+    "prerender": "ng run template:prerender"
   },
   "private": true,
   "dependencies": {
@@ -19,8 +23,11 @@
     "@angular/material": "^17.3.2",
     "@angular/platform-browser": "^17.3.2",
     "@angular/platform-browser-dynamic": "^17.3.2",
+    "@angular/platform-server": "^17.3.2",
     "@angular/router": "^17.3.2",
     "@angular/service-worker": "^17.3.2",
+    "@angular/ssr": "^17.3.2",
+    "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.4"
@@ -29,7 +36,10 @@
     "@angular-devkit/build-angular": "^17.3.2",
     "@angular/cli": "~17.3.2",
     "@angular/compiler-cli": "^17.3.2",
+    "@types/express": "^4.17.17",
     "@types/jasmine": "~4.3.0",
+    "@types/node": "^18.18.0",
+    "browser-sync": "^3.0.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
